<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/fundo_azul"
    android:padding="16dp"
    tools:context=".ui.activity.ResultadoIMCActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/resultado_do_imc"
        android:textAppearance="@style/TextAppearance.AppCompat.Title" />

    <ImageView
        android:id="@+id/ivIMCResultado"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:layout_margin="16dp"
        android:contentDescription="@string/imagem_de_imc"/>

    <TextView
        android:id="@+id/tvIMCResultado"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/seu_imc"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium" />
    <TextView
        android:id="@+id/tvIMCClassificacao"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:paddingBottom="64dp"
        android:text="@string/sua_classifica_e"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium" />

</LinearLayout>